# garden-opengl

./: .gitignore  CMakeLists.txt  GenerateSolution.bat  Makefile.win  README.md  camera.hpp  collider.hpp  gameObject.hpp  main.cpp  mesh.hpp  playerEntity.hpp  renderer.hpp  rigidbody.hpp  world.hpp
include/irrlicht/: quaternion.h  vector3.h
models/: Character.gltf  m_grasscube.hpp  m_map_bgtrees.hpp  m_map_collider.hpp  m_map_ground.hpp  m_map_trees.hpp  m_sky.hpp  m_sphere.hpp  map.gltf  model2cpp.py  obj2cpp.py  perla.py
src/: Application.hpp  FreecamEntity.hpp  InputHandler.hpp  InputManager.cpp  InputManager.hpp  OpenGLRenderAPI.cpp  OpenGLRenderAPI.hpp  PhysicsSystem.cpp  PhysicsSystem.hpp  PlayerController.hpp  RenderAPI.hpp  camera.hpp  collider.hpp  gameObject.hpp  main.cpp  mesh.hpp  playerEntity.hpp  renderer.hpp  rigidbody.hpp  world.hpp
src/Components/: InputComponent.hpp  PlayerRepresentation.hpp  camera.hpp  collider.hpp  gameObject.hpp  mesh.hpp  playerEntity.hpp
src/Graphics/: OpenGLRenderAPI.cpp  OpenGLRenderAPI.hpp  RenderAPI.hpp  renderer.hpp
src/Utils/: CrashHandler.hpp  GltfLoader.cpp  GltfLoader.hpp  GltfMaterialLoader.cpp  GltfMaterialLoader.hpp  Log.cpp  Log.hpp  ObjLoader.cpp  ObjLoader.hpp  Vertex.hpp
